[project]
name = "zotero-tag-visualizer"
version = "0.1.0"
description = "A Python web application that fetches tags from your Zotero library and displays them as an interactive tag cloud with filtering capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyzotero>=1.5.0",
    "dash>=2.17.0",
    "plotly>=5.17.0",
    "wordcloud>=1.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "dash-bootstrap-components>=1.5.0",
]
